objects/ClientCase__c.object
<CustomObject>
    <fields>
        <fullName>FinancialCapabilityOutcomes__c</fullName>
        <label>Financial Capability Outcome</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Score and/or resolved credit issues</fullName>
                </value>
                <value>
                    <fullName>Establish credit history</fullName>
                </value>
                <value>
                    <fullName>Fewer debts past-due</fullName>
                </value>
                <value>
                    <fullName>Increase savings</fullName>
                </value>
                <value>
                    <fullName>Spend Less on financial services</fullName>
                </value>
                <value>
                    <fullName>Increase amount of appropriate insurance coverage</fullName>
                </value>
                <value>
                    <fullName>Have sufficient savings to cover at least three months of basic living expense</fullName>
                </value>
                <value>
                    <fullName>Establish savings for a specific goal</fullName>
                </value>
                <value>
                    <fullName>Increased in tax benefit</fullName>
                </value>
                <value>
                    <fullName>Stabilize house (at risk of eviction or foreclosure)</fullName>
                </value>
                <value>
                    <fullName>Increase access to credit</fullName>
                </value>
                <value>
                    <fullName>Fewer accounts in collection</fullName>
                </value>
                <value>
                    <fullName>Reduce level of debt</fullName>
                </value>
                <value>
                    <fullName>Increase net worth</fullName>
                </value>
                <value>
                    <fullName>Engage in new financial products</fullName>
                </value>
                <value>
                    <fullName>Increase ability to manage fluctuations income</fullName>
                </value>
                <value>
                    <fullName>Decrease costs of tax filing</fullName>
                </value>
                <value>
                    <fullName>Optimize public benefits portfolio</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Financial_Capability_Data_Complete__c</fullName>
        <formula>if(ISBLANK(ClientNumber__c)|| 
			ISBLANK(IntakeDate__c)||
			ISBLANK(PrimaryClient__r.FirstName)||
			ISBLANK(PrimaryClient__r.LastName)||
			ISBLANK(PrimaryClient__r.Birthdate)||
			ISBLANK(TEXT(Gender__c))||
			ISBLANK(TEXT(Race__c))||
			ISBLANK(TEXT(Ethnicity__c))||
			ISBLANK(HouseholdSize__c)||
			ISBLANK(PreCounselingAnnualHouseholdIncome__c)||
			ISBLANK(PostCounselingAnnualHouseholdIncome__c)||
			ISBLANK(PreCounselingSavings__c)||
			ISBLANK(PostCounselingSavings__c)||
			ISBLANK(PreCounselingCreditScore__c)||
			ISBLANK(PostCounselingCreditScore__c)||
			ISBLANK(PreCounselingHouseholdDebt__c)||
			ISBLANK(PostCounselingHouseholdDebt__c)||
			ISBLANK(TEXT(PreCounselingResidenceType__c)) ||
			ISBLANK(TEXT(PostCounselingResidenceType__c)) ||
			ISBLANK(Address__Street__s)||
			((TotalHoursOfFCEducation__c == null || TotalHoursOfFCEducation__c == 0) &amp;&amp;
				(TotalCounselingSessionDuration__c == null || TotalCounselingSessionDuration__c &lt; 15)) ||
			ISBLANK(ClientCaseClosedDate__c),&apos;failed&apos;,&apos;passed&apos;)</formula>
        <label>Financial Capability Data Complete</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Capability_Goals__c</fullName>
        <label>Financial Capability Goals</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Score and/or resolved credit issues</fullName>
                </value>
                <value>
                    <fullName>Establish credit history</fullName>
                </value>
                <value>
                    <fullName>Fewer debts past-due</fullName>
                </value>
                <value>
                    <fullName>Increase savings</fullName>
                </value>
                <value>
                    <fullName>Spend less on financial services</fullName>
                </value>
                <value>
                    <fullName>Increase amount of appropriate insurance coverage</fullName>
                </value>
                <value>
                    <fullName>Have sufficient savings to cover at least three months of basic living expenses</fullName>
                </value>
                <value>
                    <fullName>Establish savings for a specific goal</fullName>
                </value>
                <value>
                    <fullName>Increased in tax benefit</fullName>
                </value>
                <value>
                    <fullName>Stabilize housing (at risk of eviction or foreclosure)</fullName>
                </value>
                <value>
                    <fullName>Increase access to credit</fullName>
                </value>
                <value>
                    <fullName>Fewer accounts in collections</fullName>
                </value>
                <value>
                    <fullName>Reduce level of debt</fullName>
                </value>
                <value>
                    <fullName>Increase net worth</fullName>
                </value>
                <value>
                    <fullName>Engage in new financial products</fullName>
                </value>
                <value>
                    <fullName>Increase ability to manage fluctuations income</fullName>
                </value>
                <value>
                    <fullName>Decrease costs of tax filing</fullName>
                </value>
                <value>
                    <fullName>Optimize public benefits portfolio</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FirstMortgageBalance__c</fullName>
        <label>1st Mortgage (Balance)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FirstMortgageMonthlyPayment__c</fullName>
        <label>1st Mortgage (Monthly Payment)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FormalPartneringOrgProvidedService__c</fullName>
        <inlineHelpText>A formal partner can be a NeighborWorks Network Organization or non-network organization that has a formal Memorandum of Understanding (MOU). Sending a client to a lender is not considered a formal partnership and does not require the MOU.</inlineHelpText>
        <label>Formal Partnering Org Provided Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funder__c</fullName>
        <description>Agency to custom list</description>
        <label>Funder</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FHA</fullName>
                </value>
                <value>
                    <fullName>FHLMC</fullName>
                </value>
                <value>
                    <fullName>Glendale</fullName>
                </value>
                <value>
                    <fullName>HASC-West-1</fullName>
                </value>
                <value>
                    <fullName>HFM</fullName>
                </value>
                <value>
                    <fullName>HUD</fullName>
                </value>
                <value>
                    <fullName>IDA Program</fullName>
                </value>
                <value>
                    <fullName>LEAD</fullName>
                </value>
                <value>
                    <fullName>Lexington</fullName>
                </value>
                <value>
                    <fullName>Louisville</fullName>
                </value>
                <value>
                    <fullName>Low Mod Builders</fullName>
                </value>
                <value>
                    <fullName>NeighborWorks</fullName>
                </value>
                <value>
                    <fullName>Section 8 HACSJ</fullName>
                </value>
                <value>
                    <fullName>Wells Fargo</fullName>
                </value>
                <value>
                    <fullName>World Bank</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>HUD-Defined Gender</description>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Gender</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Goal_Decrease_Tax_Filing_Cost__c</fullName>
        <formula>IF(INCLUDES( Financial_Capability_Goals__c , &apos;Decrease costs of tax filing&apos;),&apos;Decrease costs of tax filing&apos;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal Decrease Tax Filing Cost</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_Establish_Credit__c</fullName>
        <formula>IF(INCLUDES( Financial_Capability_Goals__c , &apos;Establish credit history&apos;),&apos;Establish credit history&apos;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal Establish Credit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_Fewer_Collections__c</fullName>
        <formula>IF(INCLUDES( Financial_Capability_Goals__c , &apos;Fewer accounts in collections&apos;),&apos;Fewer accounts in collections&apos;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal Fewer Collections</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_Fewer_Past_Due__c</fullName>
        <formula>IF(INCLUDES( Financial_Capability_Goals__c , &apos;Fewer debts past-due&apos;),&apos;Fewer debts past-due&apos;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal Fewer Past Due</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_Improve_Credit__c</fullName>
        <formula>IF(INCLUDES( Financial_Capability_Goals__c , &apos;Improve credit score and/or resolved credit issues&apos;),&apos;Improve credit score and/or resolved credit issues&apos;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal Improve Credit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_Increase_Credit_Access__c</fullName>
        <formula>IF(INCLUDES(Financial_Capability_Goals__c , &apos;Increase access to credit&apos;),&apos;Increase access to credit&apos;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal Increase Credit Access</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_Increase_Insurance_Coverage__c</fullName>
        <formula>IF(INCLUDES( Financial_Capability_Goals__c , &apos;Increase amount of appropriate insurance coverage&apos;),&apos;Increase amount of appropriate insurance coverage&apos;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal Increase Insurance Coverage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_Increase_Savings__c</fullName>
        <formula>IF(INCLUDES( Financial_Capability_Goals__c , &apos;Increase savings&apos;),&apos;Increase savings&apos;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal Increase Savings</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_Increase_Tax_Benefit__c</fullName>
        <formula>IF(INCLUDES( Financial_Capability_Goals__c , &apos;Increase in tax benefit (increased tax credits and/or increased tax refund received)&apos;),&apos;Increase in tax benefit (increased tax credits and/or increased tax refund received)&apos;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal Increase Tax Benefit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_Increase_Worth__c</fullName>
        <formula>IF(INCLUDES( Financial_Capability_Goals__c , &apos;Increase net worth&apos;),&apos;Increase net worth&apos;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal Increase Worth</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_Manage_Fluctuations_in_Income__c</fullName>
        <formula>IF(INCLUDES( Financial_Capability_Goals__c , &apos;Increase ability to manage fluctuations income&apos;),&apos;Increase ability to manage fluctuations income&apos;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal Manage Fluctuations in Income</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_New_Financial_Products__c</fullName>
        <formula>IF(INCLUDES( Financial_Capability_Goals__c , &apos;Engage in new financial products (e.g. savings/checking account, retirement account, college savings)&apos;),&apos;Engage in new financial products (e.g. savings/checking account; retirement account; college savings)&apos;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal New Financial Products</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_Optimize_Public_Benefits__c</fullName>
        <formula>IF(INCLUDES( Financial_Capability_Goals__c , &apos;Optimize public benefits portfolio&apos;),&apos;Optimize public benefits portfolio&apos;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal Optimize Public Benefits</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_Reduce_Debt__c</fullName>
        <formula>IF(INCLUDES( Financial_Capability_Goals__c , &apos;Reduce level of debt&apos;),&apos;Reduce level of debt&apos;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal Reduce Debt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_Savings_Goal__c</fullName>
        <formula>IF(INCLUDES( Financial_Capability_Goals__c , &apos;Establish savings for specific goal (car purchase, start small business, tuition, etc.)&apos;),&apos;Establish savings for specific goal (car purchase; start small business; tuition; etc.)&apos;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal Savings Goal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_Spend_Less_on_Financial_Services__c</fullName>
        <formula>IF(INCLUDES( Financial_Capability_Goals__c , &apos;Spend less on financial services&apos;), &apos;Spend less on financial services&apos;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal Spend Less on Financial Services</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_Three_Months_Savings__c</fullName>
        <formula>IF(INCLUDES( Financial_Capability_Goals__c , &apos;Have sufficient savings to cover at least three months of basic living expenses&apos;),&apos;Have sufficient savings to cover at least three months of basic living expenses&apos;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal Three Months Savings</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_of_Stabilize_housing__c</fullName>
        <formula>IF(INCLUDES(Financial_Capability_Goals__c , &apos;Stabilize housing (at risk of eviction or foreclosure) &apos;),&apos;Stabilize housing (at risk of eviction or foreclosure)&apos;,null)</formula>
        <label>Goal of Stabilize housing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrantAmountUsed__c</fullName>
        <label>Grant Amount Used</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GrossMonthlyIncomeGoal__c</fullName>
        <label>Gross Monthly Income Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HBECertDate__c</fullName>
        <label>HBE Cert Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HBEProvidedByOtherAgency__c</fullName>
        <label>HBE Provided by Other Agency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HECMCertificateExpirationDate__c</fullName>
        <label>HECM Certificate Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HECMCertificateID__c</fullName>
        <label>HECM Certificate ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HECMCertificateIssueDate__c</fullName>
        <label>HECM Certificate Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HECMCertificate__c</fullName>
        <label>HECM Certificate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HOA__c</fullName>
        <label>HOA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HUDGrant__c</fullName>
        <label>HUD Grant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Comprehensive</fullName>
                </value>
                <value>
                    <fullName>Colonias</fullName>
                </value>
                <value>
                    <fullName>HECM</fullName>
                </value>
                <value>
                    <fullName>S8</fullName>
                </value>
                <value>
                    <fullName>Predatory Lending</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>MMMSA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HazardInsurance__c</fullName>
        <label>Hazard &amp; Insurance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HealthCrisisNatDisasClimateResil__c</fullName>
        <inlineHelpText>Was this service provided in direct response to a public health crisis, or a natural disaster, or to increase or improve climate resilience?</inlineHelpText>
        <label>Health Crisis/Nat Disas/Climate Resil?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>NWORole__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Natural Disaster</fullName>
                </value>
                <value>
                    <fullName>Public Health Crisis</fullName>
                </value>
                <value>
                    <fullName>Increase or improve climate resilience</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HouseholdDebt__c</fullName>
        <label>Household Debt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HouseholdIncomeBandMissing__c</fullName>
        <formula>IF(
  ISPICKVAL(AreaMedianIncome__c, &quot;&quot;),
  &quot;The Household Income Band is missing. Return to the Contact record and update missing information.&quot;,
  &quot;Passed&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Household Income Band Missing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HouseholdMonthlyIncome1__c</fullName>
        <label>Household Monthly Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HouseholdOfAMI__c</fullName>
        <label>Household % of AMI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HouseholdSize__c</fullName>
        <description>HUD-Defined Number in Household</description>
        <inlineHelpText>Total number of people living in the same household as the primary client</inlineHelpText>
        <label>Household Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HouseholdType__c</fullName>
        <label>Household Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MaritalStatus__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>HouseholdTypeHeadofHousehold</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Household__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Primary Client&apos;s Household</description>
        <label>Household</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Client Cases</relationshipLabel>
        <relationshipName>Client_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HousingExpense__c</fullName>
        <label>Housing Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IndividualCounselingHoursByAgency__c</fullName>
        <description>Total Counseling Session Duration from the Service.</description>
        <formula>IF(TotalCounselingSessionDuration__c==0,&apos;0&apos;,
IF(
AND(MOD(TotalCounselingSessionDuration__c, 60) &gt;= 0, MOD(TotalCounselingSessionDuration__c,60) &lt; 15),
IF ( TotalCounselingSessionDuration__c&gt; 59, TEXT(FLOOR(TotalCounselingSessionDuration__c/ 60)),&apos;&apos;)
&amp; IF (TotalCounselingSessionDuration__c&lt; 60,&apos;&apos;,IF ( TotalCounselingSessionDuration__c&gt;= 120,&apos;&apos;, &apos;&apos; )),
IF(
AND(MOD(TotalCounselingSessionDuration__c, 60) &gt;= 15, MOD(TotalCounselingSessionDuration__c,60) &lt; 30),
IF ( TotalCounselingSessionDuration__c&gt; 59, TEXT(FLOOR(TotalCounselingSessionDuration__c/ 60)),&apos;&apos;)
&amp; IF (TotalCounselingSessionDuration__c&lt; 60,&apos;.&apos;,IF ( TotalCounselingSessionDuration__c&gt;= 120,&apos;.&apos;, &apos;.&apos; )) &amp; &quot;25&quot;,
IF(
AND(MOD(TotalCounselingSessionDuration__c, 60) &gt;= 30, MOD(TotalCounselingSessionDuration__c,60) &lt; 45),
IF ( TotalCounselingSessionDuration__c&gt; 59, TEXT(FLOOR (TotalCounselingSessionDuration__c/ 60)),&apos;&apos;)&amp; IF (TotalCounselingSessionDuration__c&lt; 60,&apos;.&apos;,
IF ( TotalCounselingSessionDuration__c&gt;= 120,&apos;.&apos;, &apos;.&apos; )) &amp; &quot;50&quot;,
IF(
AND(MOD(TotalCounselingSessionDuration__c, 60) &gt;= 45, MOD(TotalCounselingSessionDuration__c,60) &lt;= 59),
IF ( TotalCounselingSessionDuration__c&gt; 59, TEXT(FLOOR(TotalCounselingSessionDuration__c/ 60)),&apos;&apos;)&amp; IF (TotalCounselingSessionDuration__c&lt; 60,&apos;.&apos;,
IF ( TotalCounselingSessionDuration__c&gt;= 120,&apos;.&apos;, &apos;.&apos; )) &amp; &quot;75&quot;,
&quot;&quot;
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Individual Counseling Hours by Agency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntakeCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intake Case</label>
        <referenceTo>Intake__c</referenceTo>
        <relationshipLabel>Client Cases</relationshipLabel>
        <relationshipName>Client_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IntakeDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Date the agency performed intake for the client.</description>
        <label>Intake Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsOver60Days__c</fullName>
        <formula>IF(LastEventDate__c &lt; (TODAY() - 60),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Over 60 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JudgmentsBalance__c</fullName>
        <label>Judgments - Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LandOwnershipType__c</fullName>
        <label>Land Ownership Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Co-op</fullName>
                </value>
                <value>
                    <fullName>Community land Trust</fullName>
                </value>
                <value>
                    <fullName>Condo</fullName>
                </value>
                <value>
                    <fullName>Fee simple</fullName>
                </value>
                <value>
                    <fullName>Land Trust</fullName>
                </value>
                <value>
                    <fullName>Other Ground Lease</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LandPrice__c</fullName>
        <label>Land Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LastActivityType__c</fullName>
        <label>Last Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Appointment</fullName>
                </value>
                <value>
                    <fullName>Case Management Note</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LastBankruptDate__c</fullName>
        <label>Last Bankrupt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastEventDate__c</fullName>
        <label>Last Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastForeclosureDate__c</fullName>
        <label>Last Foreclosure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LeaseNumber__c</fullName>
        <label>Lease Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan</label>
        <referenceTo>Loan__c</referenceTo>
        <relationshipLabel>Client Cases</relationshipLabel>
        <relationshipName>Client_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MSA__c</fullName>
        <label>MSA</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MailingAddressLine2__c</fullName>
        <label>Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaritalStatus__c</fullName>
        <description>HUD-Defined Marital Status</description>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MaritalStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MarketValue__c</fullName>
        <label>Market Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MarketingCommunicationsOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marketing Communications Opt-out with default to blank/no</description>
        <inlineHelpText>Whether or not the client has opted to receive non-transactional emails from this agency</inlineHelpText>
        <label>Marketing Communications Opt-Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MetropolitanStatisticalArea__c</fullName>
        <label>Metropolitan Statistical Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MissingCreditScoreReason__c</fullName>
        <label>Missing Credit Score Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NFMC Counseling Organization does not have relationship with credit reporting bureau</fullName>
                </value>
                <value>
                    <fullName>Foreclosure expected within 14 days</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Client refused to authorize credit report pull</fullName>
                </value>
                <value>
                    <fullName>NFMC Counseling Organization analyzed credit report that did not contain score</fullName>
                </value>
                <value>
                    <fullName>NFMC Counseling Organization does not analyze credit report for this level of service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MonthlyCreditorsDebt__c</fullName>
        <label>Monthly Creditor’s Debt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MonthlyIncome__c</fullName>
        <label>Total Monthly Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MortgageDelinquency__c</fullName>
        <label>Mortgage Delinquency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MortgageInsurance__c</fullName>
        <label>Mortgage Insurance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NWOProvidedCounselingEducation__c</fullName>
        <label>NWO Provided Counseling/Education</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NWOProvidedLendingServices__c</fullName>
        <label>NWO Provided Lending Services</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NWORehabConst__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NWO Rehab/Const</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>